--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: rgb(122, 122, 220);
+}
+
+.block:not(.first) {
+  background: #bc8f8f;
+  height: 200px;
+  margin-bottom: 20px;
+  width: 300px;
+  border: 4px solid rgb(72, 72, 160);
+}
+
+.first {
+  background: #bc8f8f;
+  height: 100px;
+  margin-bottom: 20px;
+  width: 300px;
+  border: 4px solid rgb(72, 72, 160);
 }
