--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,15 @@ body {
   width: 300px;
   border: 4px solid rgb(72, 72, 160);
 }
+
+#central_block {
+  padding: 20px;
+}
+#central_block ul {
+  list-style: none;
+  display: inline-block;
+}
+#central_block li {
+  float: left;
+  margin-right: 10px;
+}
