↗🔜IN PROCESS: (Псевдоклассы: DONE | Импортирование данных: STARTING): [сделаем так чтобы у нас переменной находились в одном файле, mixin-и находились в другом файле, ну ф вес основной код находилася внутри .scss файле

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,29 @@ a {
   color: blue;
   padding: 5px 15px;
 }
+
+a {
+  color: #000;
+}
+a:hover {
+  color: red;
+}
+a:active {
+  color: blue;
+}
+a:visited {
+  color: green;
+}
+
+a {
+  color: #000;
+}
+a:hover {
+  color: red;
+}
+a:active {
+  color: blue;
+}
+a:visited {
+  color: green;
+}
