✔DONE: #5 - Псевдоклассы и импортирование данных

--- a/css/style.css
+++ b/css/style.css
@@ -53,18 +53,18 @@ a:active {
   color: blue;
 }
 a:visited {
-  color: green;
+  color: rgb(181, 91, 61);
 }
 
 a {
   color: #000;
 }
 a:hover {
-  color: red;
+  color: rgb(255, 0, 21);
 }
 a:active {
   color: blue;
 }
 a:visited {
-  color: green;
+  color: rgb(177, 82, 48);
 }
